Устранения ошибок работы доступности интерфейса

--- a/catalog.html
+++ b/catalog.html
@@ -61,10 +61,10 @@
               </svg>
             </div>
             <div class="main-header__bookmarks-block">
-              <p class="main-header__bookmarks-text">Закладки <span class="main-header__counter main-header__counter--bookmarks-counter">0</span></p>
+              <p class="main-header__bookmarks-text" tabindex="0">Закладки <span class="main-header__counter main-header__counter--bookmarks-counter">0</span></p>
             </div>
             <div class="main-header__cart-block">
-              <p class="main-header__cart-text">Корзина <span class="main-header__counter main-header__counter--cart-counter">0</span></p>
+              <p class="main-header__cart-text" tabindex="0">Корзина <span class="main-header__counter main-header__counter--cart-counter">0</span></p>
             </div>
             <div class="main-header__buy-block">
               <a class="main-header__buy-button" href="#">Оформить заказ</a>
@@ -161,7 +161,7 @@
               <legend class="setup-product__group-title setup-product__group-title--makers">Производители:</legend>
               <ul class="setup-product__makers-list">
                 <li class="setup-product__makers-item setup-product__makers-item--bosch-maker">
-                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="bosch" checked>
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" name="bosch" type="checkbox" id="bosch" checked>
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
                   </svg>
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
@@ -169,15 +169,15 @@
                   <label class="setup-product__label-field" for="bosch">Bosch</label>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--interskol-maker">
-                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="интерскол">
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" name="interskol" type="checkbox" id="interskol">
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
                   </svg>
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
                   </svg>
-                  <label class="setup-product__label-field" for="интерскол">Интерскол</label>
+                  <label class="setup-product__label-field" for="interskol">Интерскол</label>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--makita-maker">
-                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="makita" checked>
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" name="makita" type="checkbox" id="makita" checked>
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" xmlns="http://www.w3.org/2000/svg" fill="#c5c5c5" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
                   </svg>
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" xmlns="http://www.w3.org/2000/svg" fill="#c5c5c5" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
@@ -185,7 +185,7 @@
                   <label class="setup-product__label-field" for="makita">Makita</label>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--dewalt-maker">
-                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="dewalt">
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" name="dewalt" type="checkbox" id="dewalt">
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
                   </svg>
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
@@ -193,7 +193,7 @@
                   <label class="setup-product__label-field" for="dewalt">Dewalt</label>
                 </li>
                 <li class="setup-product__makers-item setup-product__makers-item--hitachi-maker">
-                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" type="checkbox" id="hitachi">
+                  <input class="setup-product__field setup-product__field--makers-field visually-hidden" name="hitachi" type="checkbox" id="hitachi">
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-on" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="27" height="23"><path d="M7.285 7.486l-2.829 2.829 7.783 7.783L26.171 4.166l-2.828-2.829-11.104 11.102z"/><path fill="#c5c5c5" d="M21 20c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h16.908L21.493.415A2.96 2.96 0 0 0 20 0H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3v-9.829l-2 2V20z"/>
                   </svg>
                   <svg class="setup-product__field-indicator setup-product__field-indicator--checkbox-off" fill="#c5c5c5" xmlns="http://www.w3.org/2000/svg" width="23" height="23"><path d="M20 2c.542 0 1 .458 1 1v17c0 .542-.458 1-1 1H3c-.542 0-1-.458-1-1V3c0-.542.458-1 1-1h17m0-2H3C1.35 0 0 1.35 0 3v17c0 1.65 1.35 3 3 3h17c1.65 0 3-1.35 3-3V3c0-1.65-1.35-3-3-3z"/>
@@ -232,7 +232,7 @@
             <h3 class="sort-block__panel-title">Сортировка:</h3>
             <ul class="sort-block__sort-type-list">
               <li class="sort-block__sort-type-item sort-block__sort-type-item--price">
-                <a class="sort-block__sort-type-link" href="#">По цене</a>
+                <a class="sort-block__sort-type-link sort-block__sort-type-link--active" href="#">По цене</a>
               </li>
               <li class="sort-block__sort-type-item sort-block__sort-type-item--type">
                 <a class="sort-block__sort-type-link" href="#">По типу</a>
@@ -242,7 +242,7 @@
               </li>
             </ul>
             <div class="sort-block__sort-buttons">
-              <a class="sort-block__sort-button sort-block__sort-button--button-up" href="#">
+              <a class="sort-block__sort-button sort-block__sort-button--button-up sort-block__button-active" href="#">
                 <span class="visually-hidden">Сортировака товаров по возрастанию</span>
                 <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10">
                   <path class="sort-block__button-figure" fill="#c5c5c5" d="M5.5 0L0 10h11z"/>
@@ -260,7 +260,7 @@
             <h3 class="visually-hidden">Линейка товаров данной категории</h3>
             <ul class="product-line__product-list">
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
                   <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -272,7 +272,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
                   <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -284,7 +284,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
                   <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -296,7 +296,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
                   <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -308,7 +308,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
                   <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -320,7 +320,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
                   <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -332,7 +332,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000 new-product" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
                   <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -344,7 +344,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
                   <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                     <div class="store-product__product-actions">
@@ -356,7 +356,7 @@
                 </article>
               </li>
               <li class="product-line__product-item">
-                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000">
+                <article class="store-product product-line__store-product product-line__store-product--bosch-bfg-3000" tabindex="0">
                   <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
                   <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
                   <div class="store-product__product-actions">
@@ -480,14 +480,14 @@
             </p>
             <p class="main-footer__developers-cutaway">
               Разработано —
-              <a class="main-footer__developer-name" href="#">htmlacademy.ru</a>
+              <a class="main-footer__developer-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
             </p>
           </div>
         </div>
       </div>
     </footer>
     <section class="modal modal--cart-add">
-      <h2 class="visually-hidden">Окно перехода к корзине покупок</h2>
+      <h2 class="visually-hidden" tabindex="0">Окно перехода к корзине покупок</h2>
       <div class="modal--cart-add-content">
         <button class="modal__button-close" type="button">
           <span class="visually-hidden">Закрыть окно</span>
@@ -501,6 +501,6 @@
     </section>
   <script src="js/authorization.js"></script>
   <script src="js/product-actions.js"></script>
-  <script src="js/page-switch.js"></script>
+  <script src="js/range-input.js"></script>
   </body>
 </html>
