--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
             <a class="main-header__logo-link">Техномарт</a>
           </div>
           <div class="main-header__search-block">
-            <input class="main-header__search-field" type="search" placeholder="Поиск">
+            <input class="main-header__search-field" type="search" placeholder="Поиск:">
             <svg class="main-header__search-logo" width="17" height="17"><path class="main-header__search-logo-figure" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z"/>
             </svg>
           </div>
           <div class="main-header__bookmarks-block">
-            <p class="main-header__bookmarks-text">Закладки <span class="main-header__counter main-header__counter--bookmarks-counter">0</span></p>
+            <p class="main-header__bookmarks-text" tabindex="0">Закладки <span class="main-header__counter main-header__counter--bookmarks-counter">0</span></p>
           </div>
           <div class="main-header__cart-block">
-            <p class="main-header__cart-text">Корзина <span class="main-header__counter main-header__counter--cart-counter">0</span></p>
+            <p class="main-header__cart-text" tabindex="0">Корзина <span class="main-header__counter main-header__counter--cart-counter">0</span></p>
           </div>
           <div class="main-header__buy-block">
             <a class="main-header__buy-button" href="#">Оформить заказ</a>
@@ -170,48 +170,48 @@
         </header>
         <ul class="top-products__list">
           <li class="top-products__item">
-            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-9000">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-9000" tabindex="0">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 9000</h3>
               <img class="store-product__image" src="img/perforator-1.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 9000">
               <div class="store-product__product-actions">
-                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
-                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                <button class="store-product__product-action store-product__product-action--add-product" type="button" tabindex="0">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button" tabindex="0">В закладки</button>
               </div>
               <p class="store-product__old-price">32500 Р.</p>
               <p class="store-product__current-price button">25500 Р.</p>
             </article>
           </li>
           <li class="top-products__item">
-            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-3000">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-3000" tabindex="0">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 3000</h3>
               <img class="store-product__image" src="img/perforator-2.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 3000">
               <div class="store-product__product-actions">
-                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
-                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                <button class="store-product__product-action store-product__product-action--add-product" type="button" tabindex="0">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button" tabindex="0">В закладки</button>
               </div>
               <p class="store-product__old-price">22500 Р.</p>
               <p class="store-product__current-price button">15500 Р.</p>
             </article>
           </li>
           <li class="top-products__item">
-            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-6000">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-6000" tabindex="0">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 6000</h3>
               <img class="store-product__image" src="img/perforator-3.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
               <div class="store-product__product-actions">
-                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
-                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                <button class="store-product__product-action store-product__product-action--add-product" type="button" tabindex="0">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button" tabindex="0">В закладки</button>
               </div>
               <p class="store-product__old-price">30500 Р.</p>
               <p class="store-product__current-price button">25500 Р.</p>
             </article>
           </li>
           <li class="top-products__item">
-            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-2000 new-product">
+            <article class="store-product top-products__store-product top-products__store-product--bosch-bfg-2000 new-product" tabindex="0">
               <h3 class="store-product__title">Перфоратор BOSCH BFG 2000</h3>
               <img class="store-product__image" src="img/perforator-4.jpg" width="207" height="112" alt="Перфоратор BOSCH BFG 6000">
               <div class="store-product__product-actions">
-                <button class="store-product__product-action store-product__product-action--add-product" type="button">Купить</button>
-                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button">В закладки</button>
+                <button class="store-product__product-action store-product__product-action--add-product" type="button" tabindex="0">Купить</button>
+                <button class="store-product__product-action store-product__product-action--add-bookmark" type="button" tabindex="0">В закладки</button>
               </div>
               <p class="store-product__old-price store-product__old-price--none"></p>
               <p class="store-product__current-price button">12500 Р.</p>
@@ -426,14 +426,14 @@
             </p>
             <p class="main-footer__developers-cutaway">
               Разработано —
-              <a class="main-footer__developer-name" href="#">htmlacademy.ru</a>
+              <a class="main-footer__developer-name" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
             </p>
           </div>
         </div>
       </div>
     </footer>
     <section class="modal modal--feedback">
-      <h2 class="visually-hidden">Окно отправки сообщения</h2>
+      <h2 class="visually-hidden" tabindex="0">Окно отправки сообщения</h2>
       <div class="modal--feedback-content">
         <form class="modal--feedback__feedback-form" action="https://echo.htmlacademy.ru" method="post">
           <p class="modal--feedback__field-item modal--feedback__field-item--user-name">
@@ -457,19 +457,21 @@
         </form>
       </div>
     </section>
-    <section class="modal modal--map-location">
+    <section class="modal modal--map-location" tabindex="0" aria-hidden="true">
       <div class="modal--location-content">
         <h2 class="visually-hidden">Как до нас добраться</h2>
-        <iframe class="modal--map-location__map-yandex" src="https://yandex.ru/map-widget/v1/-/CCS~zHPq" width="940" height="446" frameborder="1" allowfullscreen="true">
+        <iframe class="modal--map-location__map-yandex" src="https://yandex.ru/map-widget/v1/-/CCS~zHPq" width="940" height="446">
         </iframe>
-        <img class="modal--map-location__map-image" src="img/big-map.jpg" width="940" height="446" alt="Наше расположение на карте">
+        <a class="modal--map-service" href="https://yandex.ru/maps/2/saint-petersburg/?ll=30.323376%2C59.938545&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fll%3D30.323%252C59.939%26spn%3D0.001%252C0.001%26text%3D%25D0%25A0%25D0%25BE%25D1%2581%25D1%2581%25D0%25B8%25D1%258F%252C%2520%25D0%25A1%25D0%25B0%25D0%25BD%25D0%25BA%25D1%2582-%25D0%259F%25D0%25B5%25D1%2582%25D0%25B5%25D1%2580%25D0%25B1%25D1%2583%25D1%2580%25D0%25B3%252C%2520%25D0%2591%25D0%25BE%25D0%25BB%25D1%258C%25D1%2588%25D0%25B0%25D1%258F%2520%25D0%259A%25D0%25BE%25D0%25BD%25D1%258E%25D1%2588%25D0%25B5%25D0%25BD%25D0%25BD%25D0%25B0%25D1%258F%2520%25D1%2583%25D0%25BB%25D0%25B8%25D1%2586%25D0%25B0%252C%252019%252F8&sctx=ZAAAAAgAEAAaKAoSCe8dNSbEAEZAEWg%2B527XKUxAEhIJ6DBfXoB94T8RLSEf9GxW0z8oCjAAOP%2Fwivzzus2W8QFAL0gBVQAAgL9Y%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FAWoCcnVwAJ0BzczMPaABAKgBAA%3D%3D&sll=30.323376%2C59.938545&sspn=0.008540%2C0.004264&text=большая%20конюшенная%20улица%2019&z=17">
+          <img class="modal--map-location__map-image" src="img/big-map.jpg" width="940" height="446" alt="Наше расположение на карте">
+        </a>
         <button class="modal__button-close" type="button">
           <span class="visually-hidden">Закрыть окно</span>
         </button>
       </div>
     </section>
     <section class="modal modal--cart-add">
-      <h2 class="visually-hidden">Окно перехода к корзине покупок</h2>
+      <h2 class="visually-hidden" tabindex="0">Окно перехода к корзине покупок</h2>
       <div class="modal--cart-add-content">
         <button class="modal__button-close" type="button">
           <span class="visually-hidden">Закрыть окно</span>
