--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Техномарт</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/min-style.css">
   </head>
   <body>
     <header class="main-header main-header--page-context">
@@ -343,7 +343,7 @@
               заехав в наш офис:
           </p>
           <img class="contacts__map-location" src="img/map-mini.jpg" width="300" height="158" alt="Расположение нашего офиса на карте" tabindex="0">
-          <button class="contacts__modal-open button" type="button">Заблудились? Напишите нам!</button>
+          <a class="contacts__modal-open button" href="contacts.html">Заблудились? Напишите нам!</a>
         </section>
       </article>
     </main>
@@ -483,11 +483,11 @@
         </div>
       </div>
     </section>
-  <script src="js/modal-feedback.js"></script>
-  <script src="js/authorization.js"></script>
-  <script src="js/product-actions.js"></script>
-  <script src="js/main-slider.js"></script>
-  <script src="js/modal-map.js"></script>
-  <script src="js/services.js"></script>
+  <script src="js/min-modal-feedback.js"></script>
+  <script src="js/min-authorization.js"></script>
+  <script src="js/min-product-actions.js"></script>
+  <script src="js/min-main-slider.js"></script>
+  <script src="js/min-modal-map.js"></script>
+  <script src="js/min-services.js"></script>
   </body>
 </html>
